--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -1,3 +1,12 @@
 .home {
     // rules specific to home page
 }
+
+.reddit-card-img-container {
+    max-height: 150px;
+    overflow: hidden;
+}
+
+.reddit-card-img {
+    width: 100%;
+}
