Added in search functionality in the nav bar

--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -1,7 +1,6 @@
-<md-toolbar layout="row" class="md-toolbar-tools">
-	<img class="nav-logo" src="/assets/img/reddit-logo.png">
+<md-toolbar ng-if="$ctrl.credentials"
+	layout="row" class="md-toolbar-tools navigation-container">
+	<a href="/"><img class="nav-logo" src="/assets/img/reddit-logo.png"></a>
+	<search-input search-query="$ctrl.searchQuery"></search-input>
 	<md-button ng-repeat="page in $ctrl.pages" ng-href="{{page.url}}">{{ page.label }}</md-button>
-	<md-input-container>
-		<input type="search" placeholder="Enter in search term">
-	</md-input-container>
 </md-toolbar>
