--- a/src/app/common/nav/nav.component.scss
+++ b/src/app/common/nav/nav.component.scss
@@ -1,3 +1,11 @@
 .nav-logo {
     width: 50px;
 }
+
+.navigation-container {
+    justify-content: space-between;
+}
+
+.navigation-search {
+    display: flex;
+}
