--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -4,7 +4,7 @@
 		<img src="{{$ctrl.identity.icon_img}}">
 		<md-content>
 			<div>Total karma: {{$ctrl.identity.comment_karma}}</div>
-			<div>Created: {{$ctrl.identity.created}}</div>
+			<div>Created: {{$ctrl.identity.created_utc * 1000 | date: "MMM d, yyyy"}}</div>
 		</md-content>
 	</div>
 </div>
