--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,4 +21,7 @@
 			</md-card-footer>
 		</md-card>
 	</div>
+	<div ng-if="!$ctrl.subredditCards || $ctrl.subredditCards.length === 0" class="md-body-1">
+		No posts found..
+	</div>
 </div>
