--- a/src/app/components/oauth/oauth.component.html
+++ b/src/app/components/oauth/oauth.component.html
@@ -1,8 +1,8 @@
 <div layout-padding layout="column" class="oauth">
     <div class="md-body-1">
-        <md-content>
+        <div>
             <div ng-if="!$ctrl.isReady">Initializing oauth credentials...</div>
             <div ng-if="$ctrl.isReady">Access denied</div>
-        </md-content>
+        </div>
     </div>
 </div>
