--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -2,9 +2,9 @@
 	<h1 class="md-headline">Welcome {{$ctrl.identity.name}}</h1>
 	<div class="md-body-1">
 		<img src="{{$ctrl.identity.icon_img}}">
-		<md-content>
+		<div>
 			<div>Total karma: {{$ctrl.identity.comment_karma}}</div>
 			<div>Created: {{$ctrl.identity.created_utc * 1000 | date: "MMM d, yyyy"}}</div>
-		</md-content>
+		</div>
 	</div>
 </div>
